# cloudsearch

./: .gitignore  Makefile  README.MD  alembic.ini  crawl_state.db-journal  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
api/: Dockerfile  go.mod  go.sum
api/cmd/server/: main.go
api/embed_service/: Dockerfile  main.py  requirements.txt
api/internal/cache/: lru.go  lru_test.go
api/internal/config/: config.go
api/internal/db/: postgres.go
api/internal/embedding/: client.go
api/internal/generator/: rag.go  rag_test.go
api/internal/handler/: health.go  search.go  stats.go
api/internal/llm/: anthropic.go  ollama.go  openai.go  provider.go  provider_test.go  stream.go
api/internal/models/: api.go  models.go
api/internal/ratelimit/: limiter.go  limiter_test.go
api/internal/retrieval/: hybrid.go  keyword.go  reranker.go  reranker_test.go  vector.go
api/internal/server/: middleware.go  routes.go  server.go
api/migrate/: Dockerfile
scripts/: seed_demo.py  seed_services.py
src/ingestion/: __main__.py  cli.py  config.py  models.py  pipeline.py
tests/: conftest.py  test_chunker.py  test_cli.py  test_crawler.py  test_embedder.py  test_indexer.py  test_parser.py  test_pipeline.py  test_retrieval_recall.py
tests/fixtures/: aws_lambda_handler.html  aws_s3_bucket_policy.html
web/: .env.local.example  README.md
web/app/: globals.css  layout.tsx  page.tsx
web/app/stats/: page.tsx
web/components/: ThemeToggle.tsx  TopBar.tsx
web/lib/: config.ts  services.ts  types.ts  useSearchStream.ts  utils.ts
(+38 files in other folders)
