[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudsearch-ingestion"
version = "0.1.0"
description = "Cloud documentation search engine — ingestion pipeline"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.9,<4",
    "aiosqlite>=0.19,<1",
    "asyncpg>=0.29,<1",
    "beautifulsoup4>=4.12,<5",
    "lxml>=5.1,<6",
    "click>=8.1,<9",
    "numpy>=1.26,<3",
    "pgvector>=0.3,<1",
    "pydantic>=2.5,<3",
    "pydantic-settings>=2.1,<3",
    "sentence-transformers>=2.3,<4",
    "tiktoken>=0.5,<1",
    "structlog>=24.1,<26",
    "alembic>=1.13,<2",
    "psycopg2-binary>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=4.1,<6",
    "ruff>=0.2,<1",
]

[project.scripts]
cloudsearch-ingest = "ingestion.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100
